// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collection component should match the previous snapshot 1`] = `
<div>
   
  <div
    className="byfiIm"
  >
    <span
      className="drgkCg"
      onClick={[Function]}
    >
      <h3 />
      <button
        className="pull-right exyKyC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="eMVcPd"
        >
          <div
            className="ddxWyy"
          />
          <span
            className="jsYWMN"
          >
            Change name
          </span>
        </div>
        <i
          className="fa fa-pencil"
          role="presentation"
        />
      </button>
      <button
        className="pull-right exyKyC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="eMVcPd"
        >
          <div
            className="ddxWyy"
          />
          <span
            className="jsYWMN"
          >
            Delete
          </span>
        </div>
        <i
          className="fa fa-trash"
          role="presentation"
        />
      </button>
      <hr />
    </span>
    <div
      aria-expanded={null}
      className="collapse in"
    >
      <div>
         
        <div
          className="kzXmMh"
        >
          <div
            className="list-group"
          >
            <div
              className="list-group-item"
            >
              <div
                className="ldGGuX"
              >
                <button
                  className="exyKyC"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <div
                    className="eMVcPd"
                  >
                    <div
                      className="ddxWyy"
                    />
                    <span
                      className="jsYWMN"
                    >
                      Toggle edit
                    </span>
                  </div>
                  <i
                    className="fa fa-cog"
                    role="presentation"
                  />
                </button>
                <button
                  className="exyKyC"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <div
                    className="eMVcPd"
                  >
                    <div
                      className="ddxWyy"
                    />
                    <span
                      className="jsYWMN"
                    >
                      Minimize
                    </span>
                  </div>
                  <i
                    className="fa fa-minus"
                    role="presentation"
                  />
                </button>
              </div>
              <div
                className="bGRROV"
                onClick={[Function]}
                onDoubleClick={[Function]}
              >
                <div>
                  <h4>
                    POST
                  </h4>
                  www.foo.no
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Collections component should match the previous snapshot 1`] = `
<div
  className="panel panel-default"
  id={undefined}
>
  <div
    className="panel-heading"
  >
    <span
      className="clearfix"
    >
      <button
        className="pull-right exyKyC"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="eMVcPd"
        >
          <div
            className="ddxWyy"
          />
          <span
            className="jsYWMN"
          >
            Add new collection
          </span>
        </div>
        <i
          className="fa fa-plus"
          role="presentation"
        />
      </button>
    </span>
  </div>
  <div
    className="panel-body"
  >
    <span>
      <div>
         
        <div
          className="byfiIm"
        >
          <span
            className="cznwYF"
            onClick={[Function]}
          >
            <h3>
              Collection
            </h3>
            <button
              className="pull-right exyKyC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="eMVcPd"
              >
                <div
                  className="ddxWyy"
                />
                <span
                  className="jsYWMN"
                >
                  Change name
                </span>
              </div>
              <i
                className="fa fa-pencil"
                role="presentation"
              />
            </button>
            <button
              className="pull-right exyKyC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="eMVcPd"
              >
                <div
                  className="ddxWyy"
                />
                <span
                  className="jsYWMN"
                >
                  Delete
                </span>
              </div>
              <i
                className="fa fa-trash"
                role="presentation"
              />
            </button>
            <hr />
          </span>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div>
               
              <div
                className="kzXmMh"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="ldGGuX"
                    >
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <i
                          className="fa fa-cog"
                          role="presentation"
                        />
                      </button>
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <i
                          className="fa fa-minus"
                          role="presentation"
                        />
                      </button>
                    </div>
                    <div
                      className="bGRROV"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.foo.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
         
        <div
          className="byfiIm"
        >
          <span
            className="cznwYF"
            onClick={[Function]}
          >
            <h3>
              Collection 2
            </h3>
            <button
              className="pull-right exyKyC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="eMVcPd"
              >
                <div
                  className="ddxWyy"
                />
                <span
                  className="jsYWMN"
                >
                  Change name
                </span>
              </div>
              <i
                className="fa fa-pencil"
                role="presentation"
              />
            </button>
            <button
              className="pull-right exyKyC"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="eMVcPd"
              >
                <div
                  className="ddxWyy"
                />
                <span
                  className="jsYWMN"
                >
                  Delete
                </span>
              </div>
              <i
                className="fa fa-trash"
                role="presentation"
              />
            </button>
            <hr />
          </span>
          <div
            aria-expanded={null}
            className="collapse"
          >
            <div>
               
              <div
                className="kzXmMh"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="ldGGuX"
                    >
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <i
                          className="fa fa-cog"
                          role="presentation"
                        />
                      </button>
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <i
                          className="fa fa-minus"
                          role="presentation"
                        />
                      </button>
                    </div>
                    <div
                      className="bGRROV"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.foo.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
               
              <div
                className="kzXmMh"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="ldGGuX"
                    >
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <i
                          className="fa fa-cog"
                          role="presentation"
                        />
                      </button>
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <i
                          className="fa fa-minus"
                          role="presentation"
                        />
                      </button>
                    </div>
                    <div
                      className="bGRROV"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.bar.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div>
               
              <div
                className="kzXmMh"
              >
                <div
                  className="list-group"
                >
                  <div
                    className="list-group-item"
                  >
                    <div
                      className="ldGGuX"
                    >
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Toggle edit
                          </span>
                        </div>
                        <i
                          className="fa fa-cog"
                          role="presentation"
                        />
                      </button>
                      <button
                        className="exyKyC"
                        onClick={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                      >
                        <div
                          className="eMVcPd"
                        >
                          <div
                            className="ddxWyy"
                          />
                          <span
                            className="jsYWMN"
                          >
                            Minimize
                          </span>
                        </div>
                        <i
                          className="fa fa-minus"
                          role="presentation"
                        />
                      </button>
                    </div>
                    <div
                      className="bGRROV"
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                    >
                      <div>
                        <h4>
                          POST
                        </h4>
                        www.baz.no
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;
